--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.windhoverlabs</groupId>
   <artifactId>yamcs-cfs-error-log</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0</version>
   
   	<packaging>jar</packaging>
 	<name>YAMCS plugin for the Core Flight System (CFS) Error Log.</name>
